--- a/index.html
+++ b/index.html
@@ -11,79 +11,81 @@
     <canvas id="myCanvas"></canvas>
 
     <div id="controls">
-        <button onclick="addRandomPoint()">Add Point</button>
+        <!-- <button onclick="addRandomPoint()">Add Point</button>
         <button onclick="addRandomSegment()">Add Segment</button>
         <button onclick="removeRandomSegment()">Remove Segment</button>
         <button onclick="removeRandomPoint()">Remove Point</button>
-        <button onclick="removeAll()">Remove All</button>
+        <button onclick="removeAll()">Remove All</button> -->
     </div>
 
+    <script src="js/graphEditor.js"></script>
+    <script src="js/math/util.js"></script>
     <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
     <script src="js/primitives/segment.js"></script>
     <script>
 
-        function removeAll(){
-            graph.dispose();
+        // function removeAll(){
+        //     graph.dispose();
 
-            ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-            graph.draw(ctx);
-        }
+        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+        //     graph.draw(ctx);
+        // }
 
-        function removeRandomPoint(){
-            if(graph.points.length == 0){
-                alert("no point to delete");
-                return;
-            }
-            const index = Math.floor(Math.random() * graph.points.length);
-            graph.removePoint(graph.points[index]);
+        // function removeRandomPoint(){
+        //     if(graph.points.length == 0){
+        //         alert("no point to delete");
+        //         return;
+        //     }
+        //     const index = Math.floor(Math.random() * graph.points.length);
+        //     graph.removePoint(graph.points[index]);
 
-            ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-            graph.draw(ctx);
-        }
+        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+        //     graph.draw(ctx);
+        // }
 
-        function removeRandomSegment(){
-            if(graph.segments.length == 0){
-                alert("no segment to delete");
-                return;
-            }
-            const index = Math.floor(Math.random() * graph.segments.length);
-            graph.removeSegment(graph.segments[index]);
+        // function removeRandomSegment(){
+        //     if(graph.segments.length == 0){
+        //         alert("no segment to delete");
+        //         return;
+        //     }
+        //     const index = Math.floor(Math.random() * graph.segments.length);
+        //     graph.removeSegment(graph.segments[index]);
 
-            ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-            graph.draw(ctx);
-        }
+        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+        //     graph.draw(ctx);
+        // }
 
-        function addRandomSegment(){
-            const id1 = Math.floor(Math.random() * graph.points.length);
-            const id2 = Math.floor(Math.random() * graph.points.length);
+        // function addRandomSegment(){
+        //     const id1 = Math.floor(Math.random() * graph.points.length);
+        //     const id2 = Math.floor(Math.random() * graph.points.length);
 
-            const success = graph.tryAddSegment(
-                new Segment(
-                    graph.points[id1], graph.points[id2]
-                )
-            );
+        //     const success = graph.tryAddSegment(
+        //         new Segment(
+        //             graph.points[id1], graph.points[id2]
+        //         )
+        //     );
             
 
-            ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-            graph.draw(ctx);
+        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+        //     graph.draw(ctx);
 
-            console.log(success);
-        }
+        //     console.log(success);
+        // }
 
-        function addRandomPoint(){
-            const success = graph.tryAddPoint(
-                new Point(
-                    Math.random() * myCanvas.width,
-                    Math.random() * myCanvas.height
-                )
-            );
+        // function addRandomPoint(){
+        //     const success = graph.tryAddPoint(
+        //         new Point(
+        //             Math.random() * myCanvas.width,
+        //             Math.random() * myCanvas.height
+        //         )
+        //     );
 
-            ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-            graph.draw(ctx);
+        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+        //     graph.draw(ctx);
 
-            console.log(success);
-        }
+        //     console.log(success);
+        // }
 
         myCanvas.width=700;
         myCanvas.height=800;
@@ -102,9 +104,16 @@
         console.log(p1);
 
         const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3]);
-        graph.draw(ctx);
+        const graphEditor = new GraphEditor(myCanvas, graph);
+        
+        animate();
 
-        console.log(graph);
+        function animate(){
+            ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+            graphEditor.display();
+
+            requestAnimationFrame(animate);
+        }
 
     </script>
 </body>
