--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
 
     <script src="js/graphEditor.js"></script>
+    <script src="js/viewport.js"></script>
     <script src="js/math/util.js"></script>
     <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
@@ -104,13 +105,18 @@
         console.log(p1);
 
         const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3]);
-        const graphEditor = new GraphEditor(myCanvas, graph);
+        const viewport = new Viewport(myCanvas);
+        const graphEditor = new GraphEditor(viewport, graph);
         
         animate();
 
         function animate(){
             ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
+            ctx.save();
+            ctx.scale(1 / viewport.zoom, 1 / viewport.zoom);
+            ctx.translate(viewport.offset.x, viewport.offset.y);
             graphEditor.display();
+            ctx.restore();
 
             requestAnimationFrame(animate);
         }
