--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
         const s2 = new Segment(p2,p3);
         const s3 = new Segment(p1,p4);
 
-        console.log(p1);
 
         const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3]);
         const viewport = new Viewport(myCanvas);
@@ -113,8 +112,10 @@
         function animate(){
             ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
             ctx.save();
+            ctx.translate(viewport.center.x, viewport.center.y);
             ctx.scale(1 / viewport.zoom, 1 / viewport.zoom);
-            ctx.translate(viewport.offset.x, viewport.offset.y);
+            const offset = viewport.getOffset(); 
+            ctx.translate(offset.x, offset.y);
             graphEditor.display();
             ctx.restore();
 
