--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <button onclick="removeRandomSegment()">Remove Segment</button>
         <button onclick="removeRandomPoint()">Remove Point</button>
         <button onclick="removeAll()">Remove All</button> -->
+        <button onclick="dispose()">🗑️</button>
+        <button onclick="save()">💾</button>
     </div>
 
     <script src="js/graphEditor.js"></script>
@@ -24,6 +26,8 @@
     <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
     <script src="js/primitives/segment.js"></script>
+    <script src="js/primitives/polygon.js"></script>
+    <script src="js/primitives/envelope.js"></script>
     <script>
 
         // function removeAll(){
@@ -102,24 +106,30 @@
         const s2 = new Segment(p2,p3);
         const s3 = new Segment(p1,p4);
 
+        const graphString = localStorage.getItem("graph");
+        const graphInfo = graphString ? JSON.parse( graphString ) : null;
 
-        const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3]);
+        const graph = graphInfo ? Graph.load(graphInfo) : new Graph([p1, p2, p3, p4], [s1, s2, s3]);
         const viewport = new Viewport(myCanvas);
         const graphEditor = new GraphEditor(viewport, graph);
         
         animate();
 
         function animate(){
-            ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-            ctx.save();
-            ctx.translate(viewport.center.x, viewport.center.y);
-            ctx.scale(1 / viewport.zoom, 1 / viewport.zoom);
-            const offset = viewport.getOffset(); 
-            ctx.translate(offset.x, offset.y);
+            viewport.render();
             graphEditor.display();
-            ctx.restore();
-
+            // new Polygon(graph.points).draw(ctx);
+            new Envelope(graph.segments[0], 80).draw(ctx);
             requestAnimationFrame(animate);
+        }
+
+
+        function dispose(){
+            graphEditor.dispose();
+        }
+
+        function save(){
+            localStorage.setItem("graph", JSON.stringify(graph));
         }
 
     </script>
