--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             viewport.render();
             graphEditor.display();
             // new Polygon(graph.points).draw(ctx);
-            new Envelope(graph.segments[0], 80).draw(ctx);
+            new Envelope(graph.segments[0], 200, 20).draw(ctx);
             requestAnimationFrame(animate);
         }
 
