world, building, trees

--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
         <button onclick="save()">💾</button>
     </div>
 
+    <script src="js/world.js"></script>
     <script src="js/graphEditor.js"></script>
     <script src="js/viewport.js"></script>
+    <script src="js/items/tree.js"></script>
+    <script src="js/items/building.js"></script>
     <script src="js/math/util.js"></script>
     <script src="js/math/graph.js"></script>
     <script src="js/primitives/point.js"></script>
@@ -110,16 +113,27 @@
         const graphInfo = graphString ? JSON.parse( graphString ) : null;
 
         const graph = graphInfo ? Graph.load(graphInfo) : new Graph([p1, p2, p3, p4], [s1, s2, s3]);
+
+        const world = new World(graph);
         const viewport = new Viewport(myCanvas);
         const graphEditor = new GraphEditor(viewport, graph);
+
+        let oldGraphHash = graph.hash();
         
         animate();
 
         function animate(){
             viewport.render();
+            if(graph.hash() != oldGraphHash){
+                world.generate();
+                oldGraphHash = graph.hash();
+            }
+            const viewPoint = scale(viewport.getOffset(), -1);
+            world.draw(ctx, viewPoint);
+            ctx.globalAlpha = 0.2;
             graphEditor.display();
             // new Polygon(graph.points).draw(ctx);
-            new Envelope(graph.segments[0], 200, 20).draw(ctx);
+            // new Envelope(graph.segments[0], 200, 20).draw(ctx);
             requestAnimationFrame(animate);
         }
 
