--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button id="graphBtn" onclick="setMode('graph')">🌐</button>
         <button id="stopBtn" onclick="setMode('stop')">🛑</button>
         <button id="crossingBtn" onclick="setMode('crossing')">🚶🏻</button>
+        <button id="startBtn" onclick="setMode('start')">🚙</button>
     </div>
 
     <script src="js/world.js"></script>
@@ -29,10 +30,12 @@
     <script src="js/markings/marking.js"></script>
     <script src="js/markings/stop.js"></script>
     <script src="js/markings/crossing.js"></script>
+    <script src="js/markings/start.js"></script>
     <script src="js/editors/markingEditor.js"></script>
     <script src="js/editors/graphEditor.js"></script>
     <script src="js/editors/crossingEditor.js"></script>
     <script src="js/editors/stopEditor.js"></script>
+    <script src="js/editors/startEditor.js"></script>
     <script src="js/items/tree.js"></script>
     <script src="js/items/building.js"></script>
     <script src="js/math/util.js"></script>
@@ -42,68 +45,6 @@
     <script src="js/primitives/polygon.js"></script>
     <script src="js/primitives/envelope.js"></script>
     <script>
-
-        // function removeAll(){
-        //     graph.dispose();
-
-        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        //     graph.draw(ctx);
-        // }
-
-        // function removeRandomPoint(){
-        //     if(graph.points.length == 0){
-        //         alert("no point to delete");
-        //         return;
-        //     }
-        //     const index = Math.floor(Math.random() * graph.points.length);
-        //     graph.removePoint(graph.points[index]);
-
-        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        //     graph.draw(ctx);
-        // }
-
-        // function removeRandomSegment(){
-        //     if(graph.segments.length == 0){
-        //         alert("no segment to delete");
-        //         return;
-        //     }
-        //     const index = Math.floor(Math.random() * graph.segments.length);
-        //     graph.removeSegment(graph.segments[index]);
-
-        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        //     graph.draw(ctx);
-        // }
-
-        // function addRandomSegment(){
-        //     const id1 = Math.floor(Math.random() * graph.points.length);
-        //     const id2 = Math.floor(Math.random() * graph.points.length);
-
-        //     const success = graph.tryAddSegment(
-        //         new Segment(
-        //             graph.points[id1], graph.points[id2]
-        //         )
-        //     );
-            
-
-        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        //     graph.draw(ctx);
-
-        //     console.log(success);
-        // }
-
-        // function addRandomPoint(){
-        //     const success = graph.tryAddPoint(
-        //         new Point(
-        //             Math.random() * myCanvas.width,
-        //             Math.random() * myCanvas.height
-        //         )
-        //     );
-
-        //     ctx.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        //     graph.draw(ctx);
-
-        //     console.log(success);
-        // }
 
         myCanvas.width=700;
         myCanvas.height=800;
@@ -119,21 +60,19 @@
         const s2 = new Segment(p2,p3);
         const s3 = new Segment(p1,p4);
 
-        const graphString = localStorage.getItem("graph");
-        const graphInfo = graphString ? JSON.parse( graphString ) : null;
+        const worldString = localStorage.getItem("world");
+        const worldInfo = worldString ? JSON.parse(worldString) : null;
+        const world = worldInfo ? World.load(worldInfo) : new World(new Graph());
+        const graph = world.graph;
+        // const graph = graphInfo ? Graph.load(graphInfo) : new Graph([p1, p2, p3, p4], [s1, s2, s3]);
 
-        const graph = graphInfo ? Graph.load(graphInfo) : new Graph([p1, p2, p3, p4], [s1, s2, s3]);
-
-        const world = new World(graph);
         const viewport = new Viewport(myCanvas);
-        const graphEditor = new GraphEditor(viewport, graph);
-        const stopEditor = new StopEditor(viewport, world);
-        const crossingEditor = new CrossingEditor(viewport, world);
 
         const tools = {
-            graph : {button : graphBtn, editor : graphEditor},
-            stop : {button : stopBtn, editor : stopEditor},
-            crossing : {button : crossingBtn, editor : crossingEditor}
+            graph : {button : graphBtn, editor : new GraphEditor(viewport, graph)},
+            stop : {button : stopBtn, editor : new StopEditor(viewport, world)},
+            crossing : {button : crossingBtn, editor : new CrossingEditor(viewport, world)},
+            start : {button : startBtn, editor : new StartEditor(viewport, world)}
         };
 
         let oldGraphHash = graph.hash();
@@ -159,50 +98,27 @@
 
 
         function dispose(){
-            graphEditor.dispose();
+            tools["graph"].editor.dispose();
             world.markings.length = 0;
         }
 
         function save(){
-            localStorage.setItem("graph", JSON.stringify(graph));
+            localStorage.setItem("world", JSON.stringify(world));
         }
 
         function setMode(mode){
             disableEditors();
-            switch(mode){
-                case "graph":
-                    graphBtn.style.backgroundColor = "white";
-                    graphBtn.style.filter = "";
-                    graphEditor.enable();
-                    break;
-                case "stop":
-                    stopBtn.style.backgroundColor = "white";
-                    stopBtn.style.filter = "";
-                    stopEditor.enable();
-                    break;
-                case "crossing":
-                    crossingBtn.style.backgroundColor = "white";
-                    crossingBtn.style.filter = "";
-                    crossingEditor.enable();
-                    break;
-            }
+            tools[mode].button.style.backgroundColor = "white";
+            tools[mode].button.style.filter = "";
+            tools[mode].editor.enable();
         }
 
         function disableEditors(){
             for(const tool of Object.values(tools)){
-                graphBtn.style.backgroundColor = "gray";
-                graphBtn.style.filter = "grayscale(100%)";
-                tool.editor.display();
+                tool.button.style.backgroundColor = "gray";
+                tool.button.style.filter = "grayscale(100%)";
+                tool.editor.disable();
             }
-            graphBtn.style.backgroundColor = "gray";
-            graphBtn.style.filter = "grayscale(100%)";
-            graphEditor.disable();
-            stopBtn.style.backgroundColor = "gray";
-            stopBtn.style.filter = "grayscale(100%)";
-            stopEditor.disable();
-            crossingBtn.style.backgroundColor = "gray";
-            crossingBtn.style.filter = "grayscale(100%)";
-            crossingEditor.disable();
         }
 
     </script>
