--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <button onclick="removeAll()">Remove All</button> -->
         <button onclick="dispose()">🗑️</button>
         <button onclick="save()">💾</button>
+        <label for="fileInput" class="file-input-label">
+            <input type="file" name="fileInput" id="fileInput" accept=".world" onchange="load(event)">📁
+        </label>
         &nbsp;
         <button id="graphBtn" onclick="setMode('graph')">🌐</button>
         <button id="stopBtn" onclick="setMode('stop')">🛑</button>
@@ -62,7 +65,7 @@
 
         const worldString = localStorage.getItem("world");
         const worldInfo = worldString ? JSON.parse(worldString) : null;
-        const world = worldInfo ? World.load(worldInfo) : new World(new Graph());
+        let world = worldInfo ? World.load(worldInfo) : new World(new Graph());
         const graph = world.graph;
         // const graph = graphInfo ? Graph.load(graphInfo) : new Graph([p1, p2, p3, p4], [s1, s2, s3]);
 
@@ -103,7 +106,38 @@
         }
 
         function save(){
+            const element = document.createElement("a");
+            element.setAttribute(
+                "href",
+                "data:application/json;charset=utf-8," + encodeURIComponent(JSON.stringify(worldInfo))
+            );
+            const fileName = "name.world";
+            element.setAttribute("download", fileName);
+
+            element.click();
+
+
             localStorage.setItem("world", JSON.stringify(world));
+        }
+
+        function load(event){
+            const file = event.target.files[0];
+
+            if(!file){
+                alert("no files selected");
+                return;
+            }
+
+            const reader = new FileReader();
+            reader.readAsText(file);
+
+            reader.onload = (evt) => {
+                const fileContent = evt.target.result;
+                const jsonData = JSON.parse(fileContent);
+                world = World.load(jsonData);
+                localStorage.setItem("world", JSON.stringify(world));
+                location.reload();
+            }
         }
 
         function setMode(mode){
