--- a/index.html
+++ b/index.html
@@ -1,160 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Self-driving car - No libraries</title>
     <link rel="stylesheet" href="style.css">
-    <title>Virtual World Simulator</title>
 </head>
 <body>
-    <h1>Hanafe's Virtual World Builder</h1>
-    <canvas id="myCanvas"></canvas>
-
-    <div id="controls">
-        <!-- <button onclick="addRandomPoint()">Add Point</button>
-        <button onclick="addRandomSegment()">Add Segment</button>
-        <button onclick="removeRandomSegment()">Remove Segment</button>
-        <button onclick="removeRandomPoint()">Remove Point</button>
-        <button onclick="removeAll()">Remove All</button> -->
-        <button onclick="dispose()">🗑️</button>
+    <canvas id="carCanvas"></canvas>
+    <div id="verticalButtons">
         <button onclick="save()">💾</button>
-        <label for="fileInput" class="file-input-label">
-            <input type="file" name="fileInput" id="fileInput" accept=".world" onchange="load(event)">📁
-        </label>
-        &nbsp;
-        <button id="graphBtn" onclick="setMode('graph')">🌐</button>
-        <button id="stopBtn" onclick="setMode('stop')">🛑</button>
-        <button id="crossingBtn" onclick="setMode('crossing')">🚶🏻</button>
-        <button id="startBtn" onclick="setMode('start')">🚙</button>
+        <button onclick="discard()">🗑️</button>
     </div>
-
-    <script src="js/world.js"></script>
-    <script src="js/viewport.js"></script>
-    <script src="js/markings/marking.js"></script>
-    <script src="js/markings/stop.js"></script>
-    <script src="js/markings/crossing.js"></script>
-    <script src="js/markings/start.js"></script>
-    <script src="js/editors/markingEditor.js"></script>
-    <script src="js/editors/graphEditor.js"></script>
-    <script src="js/editors/crossingEditor.js"></script>
-    <script src="js/editors/stopEditor.js"></script>
-    <script src="js/editors/startEditor.js"></script>
-    <script src="js/items/tree.js"></script>
-    <script src="js/items/building.js"></script>
-    <script src="js/math/util.js"></script>
-    <script src="js/math/graph.js"></script>
-    <script src="js/primitives/point.js"></script>
-    <script src="js/primitives/segment.js"></script>
-    <script src="js/primitives/polygon.js"></script>
-    <script src="js/primitives/envelope.js"></script>
-    <script>
-
-        myCanvas.width=700;
-        myCanvas.height=800;
-
-        const ctx = myCanvas.getContext('2d');
-
-        const p1 = new Point(200,200);
-        const p2 = new Point(500,200);
-        const p3 = new Point(200,600);
-        const p4 = new Point(300,400);
-
-        const s1 = new Segment(p1,p3);
-        const s2 = new Segment(p2,p3);
-        const s3 = new Segment(p1,p4);
-
-        const worldString = localStorage.getItem("world");
-        const worldInfo = worldString ? JSON.parse(worldString) : null;
-        let world = worldInfo ? World.load(worldInfo) : new World(new Graph());
-        const graph = world.graph;
-        // const graph = graphInfo ? Graph.load(graphInfo) : new Graph([p1, p2, p3, p4], [s1, s2, s3]);
-
-        const viewport = new Viewport(myCanvas);
-
-        const tools = {
-            graph : {button : graphBtn, editor : new GraphEditor(viewport, graph)},
-            stop : {button : stopBtn, editor : new StopEditor(viewport, world)},
-            crossing : {button : crossingBtn, editor : new CrossingEditor(viewport, world)},
-            start : {button : startBtn, editor : new StartEditor(viewport, world)}
-        };
-
-        let oldGraphHash = graph.hash();
-
-        setMode("graph");
-        
-        animate();
-
-        function animate(){
-            viewport.render();
-            if(graph.hash() != oldGraphHash){
-                world.generate();
-                oldGraphHash = graph.hash();
-            }
-            const viewPoint = scale(viewport.getOffset(), -1);
-            world.draw(ctx, viewPoint);
-            ctx.globalAlpha = 0.2;
-            for(const tool of Object.values(tools)){
-                tool.editor.display();
-            }
-            requestAnimationFrame(animate);
-        }
-
-
-        function dispose(){
-            tools["graph"].editor.dispose();
-            world.markings.length = 0;
-        }
-
-        function save(){
-            const element = document.createElement("a");
-            element.setAttribute(
-                "href",
-                "data:application/json;charset=utf-8," + encodeURIComponent(JSON.stringify(worldInfo))
-            );
-            const fileName = "name.world";
-            element.setAttribute("download", fileName);
-
-            element.click();
-
-
-            localStorage.setItem("world", JSON.stringify(world));
-        }
-
-        function load(event){
-            const file = event.target.files[0];
-
-            if(!file){
-                alert("no files selected");
-                return;
-            }
-
-            const reader = new FileReader();
-            reader.readAsText(file);
-
-            reader.onload = (evt) => {
-                const fileContent = evt.target.result;
-                const jsonData = JSON.parse(fileContent);
-                world = World.load(jsonData);
-                localStorage.setItem("world", JSON.stringify(world));
-                location.reload();
-            }
-        }
-
-        function setMode(mode){
-            disableEditors();
-            tools[mode].button.style.backgroundColor = "white";
-            tools[mode].button.style.filter = "";
-            tools[mode].editor.enable();
-        }
-
-        function disableEditors(){
-            for(const tool of Object.values(tools)){
-                tool.button.style.backgroundColor = "gray";
-                tool.button.style.filter = "grayscale(100%)";
-                tool.editor.disable();
-            }
-        }
-
-    </script>
+    <canvas id="networkCanvas"></canvas>
+    <script src="world/js/viewport.js"></script>
+    <script src="world/js/world.js"></script>
+    <script src="world/js/markings/marking.js"></script>
+    <script src="world/js/markings/stop.js"></script>
+    <script src="world/js/markings/crossing.js"></script>
+    <script src="world/js/markings/start.js"></script>
+    <script src="world/js/editors/markingEditor.js"></script>
+    <script src="world/js/editors/graphEditor.js"></script>
+    <script src="world/js/editors/crossingEditor.js"></script>
+    <script src="world/js/editors/stopEditor.js"></script>
+    <script src="world/js/editors/startEditor.js"></script>
+    <script src="world/js/items/tree.js"></script>
+    <script src="world/js/items/building.js"></script>
+    <script src="world/js/math/util.js"></script>
+    <script src="world/js/math/graph.js"></script>
+    <script src="world/js/primitives/point.js"></script>
+    <script src="world/js/primitives/segment.js"></script>
+    <script src="world/js/primitives/polygon.js"></script>
+    <script src="world/js/primitives/envelope.js"></script>
+    <script src="visualizer.js"></script>
+    <script src="network.js"></script>
+    <script src="sensor.js"></script>
+    <script src="utils.js"></script>
+    <script src="controls.js"></script>
+    <script src="car.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
