integrated self driving car

--- a/world/index.html
+++ b/world/index.html
@@ -16,11 +16,20 @@
         <label for="fileInput" class="file-input-label">
             <input type="file" name="fileInput" id="fileInput" accept=".world" onchange="load(event)">📁
         </label>
+        <button type="button" onclick="openOsmPanel()">🗺️</button>
         &nbsp;
         <button id="graphBtn" onclick="setMode('graph')">🌐</button>
         <button id="stopBtn" onclick="setMode('stop')">🛑</button>
         <button id="crossingBtn" onclick="setMode('crossing')">🚶🏻</button>
         <button id="startBtn" onclick="setMode('start')">🚙</button>
+
+        <div id="osmPanel" style="display: none;">
+            <textarea name="osmDataContainer" id="osmDataContainer" rows="10" cols="50" placeholder="paste OSM data here"></textarea>
+            <div>
+                <button onclick="parseOsmData()">✔️</button>
+                <button onclick="closeOsmPanel()">❌</button>
+            </div>
+        </div>
     </div>
 
     <script src="js/world.js"></script>
@@ -38,6 +47,7 @@
     <script src="js/items/building.js"></script>
     <script src="js/math/util.js"></script>
     <script src="js/math/graph.js"></script>
+    <script src="js/math/osm.js"></script>
     <script src="js/primitives/point.js"></script>
     <script src="js/primitives/segment.js"></script>
     <script src="js/primitives/polygon.js"></script>
@@ -148,6 +158,25 @@
                 tool.button.style.filter = "grayscale(100%)";
                 tool.editor.disable();
             }
+        }
+
+        function openOsmPanel(){
+            osmPanel.style.display = "block";
+        }
+
+        function closeOsmPanel(){
+            osmPanel.style.display = "none";
+        }
+
+        function parseOsmData(){
+            if(osmDataContainer.value == ""){
+                alert("no data");
+                return;
+            }
+            const res = Osm.parseRoads(JSON.parse(osmDataContainer.value));
+            graph.points = res.points;
+            graph.segments = res.segments;
+            closeOsmPanel();
         }
 
     </script>
