--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
         <button onclick="save()">💾</button>
         <button onclick="discard()">🗑️</button>
     </div>
-    <canvas id="networkCanvas"></canvas>
+    <div>
+        <canvas id="networkCanvas"></canvas>
+        <canvas id="miniMapCanvas"></canvas>
+    </div>
+    
+
     <script src="world/js/viewport.js"></script>
     <script src="world/js/world.js"></script>
     <script src="world/js/markings/marking.js"></script>
@@ -29,6 +34,9 @@
     <script src="world/js/primitives/segment.js"></script>
     <script src="world/js/primitives/polygon.js"></script>
     <script src="world/js/primitives/envelope.js"></script>
+    <script src="world/saves/big.world"></script>
+
+    <script src="miniMap.js"></script>
     <script src="visualizer.js"></script>
     <script src="network.js"></script>
     <script src="sensor.js"></script>
