--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <title>Self-driving car - No libraries</title>
+    <title>Hanafe's Virtual World
+    </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
