--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="world/js/primitives/polygon.js"></script>
     <script src="world/js/primitives/envelope.js"></script>
     <script src="world/saves/big.world"></script>
+    <!-- <script src="world/saves/name-6.world"></script> -->
 
     <script src="miniMap.js"></script>
     <script src="visualizer.js"></script>
