--- a/world/index.html
+++ b/world/index.html
@@ -123,6 +123,8 @@
 
 
             localStorage.setItem("world", JSON.stringify(world));
+            console.log(world);
+            localStorage.getItem("world");
         }
 
         function load(event){
