tried tensorflow.js - did not work

--- a/race.html
+++ b/race.html
@@ -7,6 +7,8 @@
 <body>
     <canvas id="carCanvas"></canvas>
     <canvas id="miniMapCanvas" class="miniMap"></canvas>
+    <!-- a button to reload the game -->
+    <button id="reloadButton" onclick="location.reload()">🔄</button>
     
 
     <script src="world/js/viewport.js"></script>
