--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Hanafe's Virtual World
     </title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
 </head>
 <body>
     <canvas id="carCanvas"></canvas>
@@ -40,16 +41,18 @@
     <script src="world/js/primitives/segment.js"></script>
     <script src="world/js/primitives/polygon.js"></script>
     <script src="world/js/primitives/envelope.js"></script>
-    <script src="world/saves/big.world"></script>
+    <!-- <script src="world/saves/big.world"></script> -->
     <!-- <script src="world/saves/name-6.world"></script> -->
 
     <script src="miniMap.js"></script>
     <script src="visualizer.js"></script>
+    <!-- <script src="networkTF.js"></script> -->
     <script src="network.js"></script>
     <script src="sensor.js"></script>
     <script src="utils.js"></script>
     <script src="controls.js"></script>
     <script src="car.js"></script>
     <script src="main.js"></script>
+    <!-- <script src="index.js"></script> -->
 </body>
 </html>
